# 3d-Transformations-Metal

./: CMakeLists.txt
old/: quad.cpp  quad.h  triangle.h
src/: .gitignore  main.cpp  primative.cpp  primative.h  quad.cpp  quad.h  renderer.cpp  renderer.h  triangle.cpp  triangle.h  window.cpp
src/MeshGenerator/: meshGenerator.hpp  meshGenerator.mm
src/Primative/: primative.cpp  primative.h
src/Primitive/: primitive.cpp  primitive.h
src/common/: Transform.cpp  Transform.h  common.h  vec4.cpp  vec4.h
src/shaders/: readShaderFile.cpp  readShaderFile.h  shaders.metal
